--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "amplify-graphql-typesense-transformer",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "description": "Amplify GraphQL @typesense transformer",
   "author": "OllieTheDev",
   "license": "MIT",
@@ -20,12 +20,12 @@
   ],
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/"
+    "url": "https://github.com/olliethedev/amplify-graphql-typesense-transformer"
   },
   "bugs": {
-    "url": "https://github.com/"
+    "url": "https://github.com/olliethedev/amplify-graphql-typesense-transformer/issues"
   },
-  "homepage": "https://github.com/",
+  "homepage": "https://github.com/olliethedev/amplify-graphql-typesense-transformer",
   "keywords": [
     "aws",
     "amplify",
