--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   ],
   "devDependencies": {
     "@aws-cdk/assert": "~1.124.0",
+    "@types/jest": "^29.5.5",
     "@types/node": "^12.12.6",
     "auto-changelog": "^2.2.1",
     "bestzip": "^2.1.5",
