--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "amplify-graphql-typesense-transformer",
-  "version": "0.0.8",
+  "version": "0.0.9",
   "description": "Amplify GraphQL @typesense transformer",
   "author": "OllieTheDev",
   "license": "MIT",
@@ -49,6 +49,7 @@
     "typescript": "^4.0.3"
   },
   "dependencies": {
+    "@aws-amplify/amplify-cli-core": "^4.2.7",
     "@aws-amplify/graphql-model-transformer": "2.1.3",
     "@aws-amplify/graphql-transformer-core": "2.1.2",
     "@aws-amplify/graphql-transformer-interfaces": "3.1.2",
